--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-three/drei": "^9.92.7",
     "@react-three/fiber": "^8.15.12",
     "framer-motion": "^10.16.16",
+    "gh-pages": "^6.1.1",
     "maath": "^0.10.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
