--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -39,6 +39,10 @@ jobs:
         run: npm install
       - name: Build
         run: npm run build
+        env:
+          VITE_APP_EMAILJS_SERVICE_ID : ${{ secrets.EMAIL_JS_PUB_KEY }}
+          VITE_APP_EMAILJS_TEMPLATE_ID : ${{ secrets.EMAIL_JS_SERVICE_ID }}
+          VITE_APP_EMAILJS_PUBLIC_KEY : ${{ secrets.EMAIL_JS_TEMPLATE_ID }}
       - name: Setup Pages
         uses: actions/configure-pages@v3
       - name: Upload artifact
